--- a/Projekat/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/Projekat/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -9,5 +9,6 @@
     <Grid>
         <TextBox Name="Hello" Text=" Hello"/>
         <Button Name="Exit" Width="100" Height="50" Click="Exit_Click"/>
+        <Button x:Name="button" Content="Izadji" HorizontalAlignment="Left" Margin="221,220,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
     </Grid>
 </Window>
