--- a/Projekat/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/Projekat/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -7,8 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <TextBox Name="Hello" Text=" Hello"/>
-        <Button Name="Exit" Width="100" Height="50" Click="Exit_Click"/>
-        <Button x:Name="button" Content="Izadji" HorizontalAlignment="Left" Margin="221,220,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+    <TextBox Name="Hello" Text=" Hello" Margin="24,24,44,210"/>
+        <Button Name="Exit" Content="Izadji" Click="Exit_Click" Margin="124,134,129,149"/>
+        <Button x:Name="button" Content="Izadji" HorizontalAlignment="Left" Margin="124,209,0,0" VerticalAlignment="Top" Width="264" Click="button_Click" Height="61"/>
+        <Rectangle Fill="Blue" Margin="24,209,416,49"/>
+        <Rectangle Fill="Blue" Margin="410,209,30,49"/>
     </Grid>
 </Window>
